Revert "fixed footer overlap in my contacts"
This reverts commit 02f6c844fe92f6643b993bef71973aebeb42a3b6.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,7 +41,7 @@ header{
 
 footer{
     justify-content: center;
-    position: relative;
+    position: fixed;
     bottom: 0;
     left: 0;
 }
